; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_ldc.c_write_raw.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/sparc/kernel/extr_ldc.c_write_raw.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ldc_channel = type { i32 }
%struct.ldc_packet = type { i32 }

@LDC_PACKET_SIZE = common dso_local global i32 0, align 4
@EMSGSIZE = common dso_local global i32 0, align 4
@EAGAIN = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ldc_channel*, i8*, i32)* @write_raw to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @write_raw(%struct.ldc_channel* %0, i8* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.ldc_channel*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.ldc_packet*, align 8
  %9 = alloca i64, align 8
  %10 = alloca i32, align 4
  store %struct.ldc_channel* %0, %struct.ldc_channel** %5, align 8
  store i8* %1, i8** %6, align 8
  store i32 %2, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = load i32, i32* @LDC_PACKET_SIZE, align 4
  %13 = icmp ugt i32 %11, %12
  br i1 %13, label %14, label %17

14:                                               ; preds = %3
  %15 = load i32, i32* @EMSGSIZE, align 4
  %16 = sub nsw i32 0, %15
  store i32 %16, i32* %4, align 4
  br label %40

17:                                               ; preds = %3
  %18 = load %struct.ldc_channel*, %struct.ldc_channel** %5, align 8
  %19 = call %struct.ldc_packet* @data_get_tx_packet(%struct.ldc_channel* %18, i64* %9)
  store %struct.ldc_packet* %19, %struct.ldc_packet** %8, align 8
  %20 = load %struct.ldc_packet*, %struct.ldc_packet** %8, align 8
  %21 = icmp ne %struct.ldc_packet* %20, null
  br i1 %21, label %25, label %22

22:                                               ; preds = %17
  %23 = load i32, i32* @EAGAIN, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %4, align 4
  br label %40

25:                                               ; preds = %17
  %26 = load %struct.ldc_packet*, %struct.ldc_packet** %8, align 8
  %27 = load i8*, i8** %6, align 8
  %28 = load i32, i32* %7, align 4
  %29 = call i32 @memcpy(%struct.ldc_packet* %26, i8* %27, i32 %28)
  %30 = load %struct.ldc_channel*, %struct.ldc_channel** %5, align 8
  %31 = load %struct.ldc_packet*, %struct.ldc_packet** %8, align 8
  %32 = load i64, i64* %9, align 8
  %33 = call i32 @send_tx_packet(%struct.ldc_channel* %30, %struct.ldc_packet* %31, i64 %32)
  store i32 %33, i32* %10, align 4
  %34 = load i32, i32* %10, align 4
  %35 = icmp ne i32 %34, 0
  br i1 %35, label %38, label %36

36:                                               ; preds = %25
  %37 = load i32, i32* %7, align 4
  store i32 %37, i32* %10, align 4
  br label %38

38:                                               ; preds = %36, %25
  %39 = load i32, i32* %10, align 4
  store i32 %39, i32* %4, align 4
  br label %40

40:                                               ; preds = %38, %22, %14
  %41 = load i32, i32* %4, align 4
  ret i32 %41
}

declare dso_local %struct.ldc_packet* @data_get_tx_packet(%struct.ldc_channel*, i64*) #1

declare dso_local i32 @memcpy(%struct.ldc_packet*, i8*, i32) #1

declare dso_local i32 @send_tx_packet(%struct.ldc_channel*, %struct.ldc_packet*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
